[build-system]
requires = ["setuptools >= 61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cactus-runner"
dynamic = ["version", "readme"]
authors = [
  {name = "Mike Turner", email = "mike.turner@anu.edu.au"},
]
maintainers = [
  {name = "Mike Turner", email = "mike.turner@anu.edu.au"},
]
description = "Cactus Test Procedure Runner (CSIP-AUS Client Test Harness)"
keywords = ["CSIP-AUS", "client", "testing", "runner"]
requires-python = ">=3.12"
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3.12",
  "Topic :: Software Development",
  "Typing :: Typed",
]
dependencies = [
  "aiohttp>=3.11.12,<4",
  "cactus-test-definitions @ git+ssh://git@github.com/bsgip/cactus-test-definitions.git@main",
  "envoy @ git+ssh://git@github.com/bsgip/envoy.git@main",
  "psycopg[binary]>=3.2.5,<4",
]

[project.urls]
Homepage = "https://github.com/bsgip/cactus-runner"
Documentation = "https://github.com/bsgip/cactus-runner/blob/main/README.md"
Repository = "https://github.com/bsgip/cactus-runner.git"
Issues = "https://github.com/bsgip/cactus-runner/issues"
Changelog = "https://github.com/bsgip/cactus-runner/blob/main/CHANGELOG.md"

[project.optional-dependencies]
dev = [
  "bandit",
  "black",
  "flake8",
  "isort",
  "mccabe",
  "mypy",
  "tox",
  "python-dotenv[cli]",
  "coverage",
]
test = [
  "pytest",
  "pytest-asyncio",
  "pytest-mock",
  "assertical",
]
cli = [
  "rich",
  "click",
]
docs = [
  "sphinx",
]

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
testpaths = [
  "tests",
]
asyncio_default_fixture_loop_scope = "session"

[tool.flake8]
max-line-length = 120
max-complexity = 10

[tool.black]
line-length = 120

[tool.isort]
profile = "black"
src_paths = ["src","tests"]

[tool.bandit]
exclude_dirs = ["tests"]

[tool.mypy]

[tool.setuptools.dynamic]
version = {attr = "cactus_runner.__version__"}
readme = {file = ["README.md"], content-type="text/markdown"}

